--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secret.DOCKERHUB_USER}}
-          password: ${{ secret.DOCKERHUB_TOKEN}}
+          username: ${{ secrets.DOCKERHUB_USER}}
+          password: ${{ secrets.DOCKERHUB_TOKEN}}
       - name: Checkout
-        uses: action/checkout@v2s
+        uses: action/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test.py"
       - name: Lint
